# folder-transfer

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS-rust.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CUTOVER.md  LIBRARY.md  LICENSE  POWERSHELL.md  README.md  RUST-PORT-SPEC.md  SECURITY.md  folder-transfer.bat  ft-client.ps1  ft-server.ps1  release.ps1  server.example.json  sync.example.json
.github/workflows/: rust-release.yml
bench/: README.md  bench-proxy.ps1  bench.ps1  bench_rust.sh  build_corpora.py  proxy.py  verify_compression.sh
rust/: Cargo.toml
rust/examples/: wanproxy.rs
rust/ffi/: FolderTransfer.cs  ft.h
rust/src/: client.rs  compress.rs  config.rs  debug.rs  ffi.rs  firewall.rs  ignore.rs  lib.rs  main.rs  mtime.rs  paths.rs  progress.rs  server.rs  tls.rs  token.rs  wire.rs
