[package]
name = "ft"
version = "0.17.0"
edition = "2021"
rust-version = "1.96"
description = "folder-transfer: wire-compatible Rust port of the PowerShell ft-server/ft-client"
license = "MIT"
repository = "https://github.com/lotgon/folder-transfer"

# Library (also a C ABI cdylib: ft.dll / libft.so) + the CLI binary.
[lib]
name = "ft"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
# rustls with the pure-Rust "ring" provider: no OpenSSL / C toolchain, easy cross-compile.
# tls12 is required so we can negotiate TLS 1.2 against the PowerShell server.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# ring backend (not the default aws_lc_rs) to avoid a C toolchain / cmake at build time.
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
# flate2 defaults to the pure-Rust miniz_oxide backend (no zlib C dependency).
# We use it in RAW deflate mode (RFC 1951) to match .NET DeflateStream.
flate2 = "1"
# zstd: vendored libzstd compiled from C and STATICALLY linked into the binary
# (build-time C only; no runtime .dll/.so -> the release stays a single file).
zstd = "0.13"
sha2 = "0.10"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[target.'cfg(windows)'.dependencies]
# Canonicalize without the \\?\ verbatim prefix so the safety-prefix check works.
dunce = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
